Faltan los reportes:(

--- a/PROYECTO_ESTRUCTURA_DE_DATOS/PROYECTO_ESTRUCTURA_DE_DATOS.rc
+++ b/PROYECTO_ESTRUCTURA_DE_DATOS/PROYECTO_ESTRUCTURA_DE_DATOS.rc
@@ -157,7 +157,7 @@ BEGIN
     COMBOBOX        CB_CARNET_CENTROVACUNACION,565,198,99,54,CBS_DROPDOWNLIST | CBS_UPPERCASE | WS_VSCROLL | WS_GROUP | WS_TABSTOP
     PUSHBUTTON      "CAPTURAR CARNET",BTN_CARNET_CAPTURAR,523,248,171,20,BS_CENTER | BS_VCENTER | BS_MULTILINE
     PUSHBUTTON      "SALIR AL MENU ANTERIOR",BTN_CARNET_REGRESAR,351,248,172,20,BS_CENTER | BS_VCENTER | BS_MULTILINE
-    GROUPBOX        "DATOS PERSONA",GB_CARNET_DATOSPERSONA,7,33,344,211,WS_GROUP | WS_TABSTOP
+    GROUPBOX        "DATOS PERSONA",GB_CARNET_PERSONA_DATOSPERSONA,7,33,344,211,WS_GROUP | WS_TABSTOP
     CTEXT           "ACABA DE ACCEDER A LA OPCIÓN DE REGISTRAR CARNET",IDC_STATIC,7,7,687,11,SS_CENTERIMAGE
     CTEXT           "POR FAVOR, REGISTRE TODOS LOS DATOS DEL CARNET",IDC_STATIC,7,18,687,11
     LTEXT           "CURP:",IDC_STATIC,99,46,20,8
@@ -169,7 +169,7 @@ BEGIN
     COMBOBOX        CB_CARNET_DOSIS,400,198,73,54,CBS_DROPDOWNLIST | CBS_UPPERCASE | WS_VSCROLL | WS_GROUP | WS_TABSTOP
     CTEXT           "Nombre de la Persona",LBL_NOMBREUSUARIO4,7,280,687,8,SS_CENTERIMAGE
     CTEXT           "Hola!",IDC_STATIC,7,271,687,8
-    GROUPBOX        "DATOS VACUNA",GB_CARNET_DATOSVACUNA,351,33,343,107,WS_GROUP | WS_TABSTOP
+    GROUPBOX        "DATOS VACUNA",GB_CARNET_VACUNA_DATOSVACUNA,351,33,343,107,WS_GROUP | WS_TABSTOP
     GROUPBOX        "CAPTURA CARNET",GB_CARNET_DATOSCARNET,351,140,343,104,WS_GROUP | WS_TABSTOP
     EDITTEXT        TXTB_CARNET_PERSONA_APELLIDOPATERNO,35,64,84,14,ES_UPPERCASE | ES_AUTOHSCROLL | ES_READONLY | WS_GROUP
     EDITTEXT        TXTB_CARNET_PERSONA_APELLIDOMATERNO,142,64,84,14,ES_UPPERCASE | ES_AUTOHSCROLL | ES_READONLY | WS_GROUP
@@ -213,10 +213,10 @@ BEGIN
     EDITTEXT        TXTB_CARNET_VACUNA_DOSIS,409,78,125,14,ES_AUTOHSCROLL | ES_READONLY | ES_NUMBER | WS_GROUP
     EDITTEXT        TXTB_CARNET_VACUNA_TIPO,384,61,125,14,ES_AUTOHSCROLL | ES_READONLY | ES_NUMBER | WS_GROUP
     EDITTEXT        TXTB_CARNET_VACUNA_MARCA,558,61,125,14,ES_AUTOHSCROLL | ES_READONLY | ES_NUMBER | WS_GROUP
-    COMBOBOX        CB_CARNET_IDVACUNA,470,44,122,54,CBS_DROPDOWNLIST | CBS_UPPERCASE | WS_VSCROLL | WS_GROUP | WS_TABSTOP
+    COMBOBOX        CB_CARNET_VACUNA_ID,470,44,122,54,CBS_DROPDOWNLIST | CBS_UPPERCASE | WS_VSCROLL | WS_GROUP | WS_TABSTOP
     PUSHBUTTON      "BUSCAR CURP",BTN_CARNET_BUSCARCURP,7,248,172,20,BS_CENTER | BS_VCENTER | BS_MULTILINE
     PUSHBUTTON      "BUSCAR VACUNA",BTN_CARNET_BUSCARVACUNA,179,248,172,20,BS_CENTER | BS_VCENTER | BS_MULTILINE
-    COMBOBOX        CB_CARNET_CURP,122,44,122,54,CBS_DROPDOWNLIST | CBS_UPPERCASE | WS_VSCROLL | WS_GROUP | WS_TABSTOP
+    COMBOBOX        CB_CARNET_PERSONA_CURP,122,44,122,54,CBS_DROPDOWNLIST | CBS_UPPERCASE | WS_VSCROLL | WS_GROUP | WS_TABSTOP
     CONTROL         "",DTP_CARNET_FECHAPROXDOSIS,"SysDateTimePick32",DTS_RIGHTALIGN | WS_GROUP | WS_TABSTOP,465,216,116,15,WS_EX_RIGHT | WS_EX_LEFTSCROLLBAR
     LTEXT           "FECHA DE PROXIMA DOSIS:",IDC_STATIC,370,220,92,8
 END
@@ -243,6 +243,124 @@ BEGIN
     GROUPBOX        "DATOS VACUNA",GB_VACUNA_DATOSVACUNA,7,30,337,96,WS_GROUP | WS_TABSTOP
     CTEXT           "Nombre de la Persona",LBL_NOMBREUSUARIO2,7,165,338,8,SS_CENTERIMAGE
     CTEXT           "Hola!",IDC_STATIC,7,152,338,8
+END
+
+DLG_REPORTEVACUNAS DIALOGEX 0, 0, 770, 299
+STYLE DS_ABSALIGN | DS_SYSMODAL | DS_SETFONT | DS_MODALFRAME | DS_3DLOOK | DS_CENTER | WS_MINIMIZEBOX | WS_MAXIMIZEBOX | WS_POPUP | WS_CAPTION | WS_SYSMENU
+CAPTION "Bienvenido a Reporte de Vacunas!"
+FONT 10, "Comic Sans MS", 400, 0, 0x0
+BEGIN
+    COMBOBOX        CB_REPORTE_VACUNA_TIPO,566,51,125,54,CBS_DROPDOWNLIST | CBS_UPPERCASE | WS_VSCROLL | WS_GROUP | WS_TABSTOP
+    COMBOBOX        CB_REPORTE_VACUNA_DOSIS,566,68,125,54,CBS_DROPDOWN | CBS_UPPERCASE | WS_VSCROLL | WS_GROUP | WS_TABSTOP
+    COMBOBOX        CB_REPORTE_VACUNA_MARCA,566,87,125,54,CBS_DROPDOWN | CBS_UPPERCASE | WS_VSCROLL | WS_GROUP | WS_TABSTOP
+    EDITTEXT        TXTB_REPORTE_VACUNA_PRECIO,566,105,125,14,ES_AUTOHSCROLL | ES_NUMBER | WS_GROUP
+    EDITTEXT        TXTB_REPORTE_VACUNA_DESCRIPCION,566,123,181,46,ES_MULTILINE | ES_UPPERCASE | ES_AUTOHSCROLL | ES_WANTRETURN | WS_GROUP,WS_EX_LEFTSCROLLBAR
+    PUSHBUTTON      "BUSCAR VACUNA",BTN_REPORTE_VACUNA_BUSCAR,501,196,85,31
+    PUSHBUTTON      "EDITAR VACUNA",BTN_REPORTE_VACUNA_EDITAR,586,196,85,31
+    PUSHBUTTON      "BORRAR VACUNA",BTN_REPORTE_VACUNA_BORRAR,671,196,85,31
+    PUSHBUTTON      "SALIR AL MENU ANTERIOR",BTN_REPORTE_VACUNA_REGRESAR,501,230,254,31
+    LISTBOX         LB_REPORTE_VACUNA_LISTA,7,40,462,252,LBS_SORT | LBS_NOINTEGRALHEIGHT | WS_VSCROLL | WS_TABSTOP
+    CTEXT           "ACABA DE ACCEDER A LA OPCIÓN DE REPORTE Y MODIFICACION DE VACUNAS",IDC_STATIC,7,8,756,11
+    CTEXT           "LISTADO DE LAS VACUNAS CAPTURADAS:",IDC_STATIC,7,29,462,11
+    CTEXT           "BUSQUEDA DE VACUNAS POR ID:",IDC_STATIC,519,30,108,11
+    GROUPBOX        "MODIFICACION DE INFORMACION",GB_REPORTE_VACUNA,481,18,282,168
+    LTEXT           "TIPO:",IDC_STATIC,543,54,20,8
+    LTEXT           "MARCA:",IDC_STATIC,537,90,26,8
+    LTEXT           "PRECIO:",IDC_STATIC,536,108,27,8
+    LTEXT           "NO. DE DOSIS:",IDC_STATIC,515,70,49,8
+    LTEXT           "DESCRIPCION VACUNA:",IDC_STATIC,487,125,78,8
+    CTEXT           "Nombre de la Persona",LBL_NOMBREUSUARIO5,481,284,282,8,SS_CENTERIMAGE
+    CTEXT           "Hola!",IDC_STATIC,481,274,282,8
+    COMBOBOX        CB_REPORTE_VACUNA_ID,629,28,125,54,CBS_DROPDOWNLIST | CBS_UPPERCASE | WS_VSCROLL | WS_GROUP | WS_TABSTOP
+END
+
+DLG_REPORTEPERSONAS DIALOGEX 0, 0, 811, 347
+STYLE DS_ABSALIGN | DS_SYSMODAL | DS_SETFONT | DS_MODALFRAME | DS_3DLOOK | DS_CENTER | WS_MINIMIZEBOX | WS_MAXIMIZEBOX | WS_POPUP | WS_CAPTION | WS_SYSMENU
+CAPTION "Bienvenido a Reporte de Personas!"
+FONT 10, "Comic Sans MS", 400, 0, 0x0
+BEGIN
+    CTEXT           "ACABA DE ACCEDER A LA OPCIÓN DE REPORTE Y MODIFICACION DE VACUNAS",IDC_STATIC,0,8,756,11
+    LISTBOX         LB_REPORTE_PERSONA_LISTA,7,30,462,310,LBS_SORT | LBS_NOINTEGRALHEIGHT | WS_VSCROLL | WS_TABSTOP
+    CTEXT           "LISTADO DE LAS PERSONAS CAPTURADAS:",IDC_STATIC,7,19,462,11
+    GROUPBOX        "MODIFICACION DE INFORMACION",GB_REPORTE_PERSONA,476,19,328,225
+    PUSHBUTTON      "SALIR AL MENU ANTERIOR",BTN_REPORTE_PERSONA_REGRESAR,509,280,254,31
+    PUSHBUTTON      "EDITAR PERSONA",BTN_REPORTE_PERSONA_EDITAR,594,249,85,31
+    PUSHBUTTON      "BORRAR PERSONA",BTN_REPORTE_PERSONA_BORRAR,679,249,85,31
+    PUSHBUTTON      "BUSCAR PERSONA",BTN_REPORTE_PERSONA_BUSCAR,509,249,85,31
+    CTEXT           "Nombre de la Persona",LBL_NOMBREUSUARIO6,469,330,335,8,SS_CENTERIMAGE
+    CTEXT           "Hola!",IDC_STATIC,469,320,335,8
+    EDITTEXT        TXTB_REPORTE_PERSONA_APELLIDOPATERNO,500,47,84,14,ES_UPPERCASE | ES_AUTOHSCROLL | WS_GROUP
+    EDITTEXT        TXTB_REPORTE_PERSONA_APELLIDOMATERNO,607,47,84,14,ES_UPPERCASE | ES_AUTOHSCROLL | WS_GROUP
+    EDITTEXT        TXTB_REPORTE_PERSONA_NOMBRE,716,47,84,14,ES_UPPERCASE | ES_AUTOHSCROLL | WS_GROUP
+    EDITTEXT        TXTB_REPORTE_PERSONA_RFC,608,74,84,14,ES_UPPERCASE | ES_AUTOHSCROLL | WS_GROUP
+    EDITTEXT        TXTB_REPORTE_PERSONA_CALLE,501,74,84,14,ES_UPPERCASE | ES_AUTOHSCROLL | WS_GROUP
+    EDITTEXT        TXTB_REPORTE_PERSONA_COLONIA,607,100,84,14,ES_UPPERCASE | ES_AUTOHSCROLL | WS_GROUP
+    EDITTEXT        TXTB_REPORTE_PERSONA_MUNICIPIO,716,100,84,14,ES_UPPERCASE | ES_AUTOHSCROLL | WS_GROUP
+    EDITTEXT        TXTB_REPORTE_PERSONA_ESTADO,501,101,84,14,ES_UPPERCASE | ES_AUTOHSCROLL | WS_GROUP
+    COMBOBOX        CB_REPORTE_PERSONA_ESTADOCIVIL,608,130,84,54,CBS_DROPDOWNLIST | CBS_UPPERCASE | WS_VSCROLL | WS_GROUP | WS_TABSTOP
+    EDITTEXT        TXTB_REPORTE_PERSONA_TELEFONO,716,129,84,14,ES_AUTOHSCROLL | ES_NUMBER | WS_GROUP
+    COMBOBOX        CB_REPORTE_PERSONA_SEXO,501,130,84,41,CBS_DROPDOWNLIST | CBS_UPPERCASE | WS_VSCROLL | WS_GROUP | WS_TABSTOP
+    COMBOBOX        CB_REPORTE_PERSONA_GRUPOOCUPACIONAL,607,159,84,50,CBS_DROPDOWNLIST | CBS_UPPERCASE | WS_VSCROLL | WS_GROUP | WS_TABSTOP
+    COMBOBOX        CB_REPORTE_PERSONA_PERFILRIESGO,716,159,84,50,CBS_DROPDOWNLIST | CBS_UPPERCASE | WS_VSCROLL | WS_GROUP | WS_TABSTOP
+    PUSHBUTTON      "CARGAR NUEVO DOCUMENTO DE IDENTIDAD",BTN_REPORTE_PERSONA_CARGARDOCUMENTO,617,191,116,47,BS_CENTER | BS_VCENTER | BS_MULTILINE
+    LTEXT           "APELLIDO PATERNO",IDC_STATIC,508,64,66,8
+    LTEXT           "APELLIDO MATERNO",IDC_STATIC,612,64,68,8
+    LTEXT           "NOMBRE(S)",IDC_STATIC,741,64,38,8
+    LTEXT           "RCF",IDC_STATIC,644,90,13,8
+    LTEXT           "FECHA DE NACIMIENTO",IDC_STATIC,717,90,80,8
+    LTEXT           "CALLE Y NUMERO",IDC_STATIC,514,91,58,8
+    LTEXT           "COLONIA",IDC_STATIC,636,117,32,8
+    LTEXT           "MUNICIPIO",IDC_STATIC,738,117,40,8
+    LTEXT           "ESTADO",IDC_STATIC,531,117,28,8
+    LTEXT           "ESTADO CIVIL",IDC_STATIC,626,144,49,8
+    LTEXT           "TELEFONO CELULAR",IDC_STATIC,725,143,67,8
+    LTEXT           "(A 10 DÍGITOS)",IDC_STATIC,732,150,52,8
+    LTEXT           "SEXO",IDC_STATIC,534,143,19,8
+    LTEXT           "GRUPO OCUPACIONAL",IDC_STATIC,616,172,73,8
+    LTEXT           "PERFIL DE RIESGO",IDC_STATIC,728,172,62,8
+    CTEXT           "<-------- (INE, Pasaporte, Licencia, Cartilla Militar, Cartilla de vacunación)",IDC_STATIC,738,196,62,42
+    CONTROL         "",PC_REPORTE_PERSONA_DOCUMENTOIDENTIDAD,"Static",SS_BITMAP | SS_CENTERIMAGE | WS_GROUP | WS_TABSTOP,498,153,92,87
+    LTEXT           "BUSQUEDA DE PERSONAS POR CURP:",IDC_STATIC,515,31,121,8
+    COMBOBOX        CB_REPORTE_PERSONA_CURP,636,29,161,54,CBS_DROPDOWNLIST | CBS_UPPERCASE | WS_VSCROLL | WS_GROUP | WS_TABSTOP
+    EDITTEXT        TXTB_REPORTE_PERSONA_FECHANACIMIENTO,714,74,85,14,ES_AUTOHSCROLL
+END
+
+DLG_REPORTECARNETS DIALOGEX 0, 0, 780, 261
+STYLE DS_ABSALIGN | DS_SYSMODAL | DS_SETFONT | DS_MODALFRAME | DS_3DLOOK | DS_CENTER | WS_MINIMIZEBOX | WS_MAXIMIZEBOX | WS_POPUP | WS_CAPTION | WS_SYSMENU
+CAPTION "Bienvenido a Reporte de Carnets!"
+FONT 10, "Comic Sans MS", 400, 0, 0x0
+BEGIN
+    CTEXT           "Hola!",IDC_STATIC,469,235,304,8
+    CTEXT           "ACABA DE ACCEDER A LA OPCIÓN DE REPORTE Y MODIFICACION DE CARNETS",IDC_STATIC,7,7,766,11
+    LISTBOX         LB_REPORTE_CARNET_LISTA,7,40,462,161,LBS_SORT | LBS_NOINTEGRALHEIGHT | WS_VSCROLL | WS_TABSTOP
+    CTEXT           "LISTADO DE LAS PERSONA VACUNADAS:",IDC_STATIC,7,29,462,11
+    GROUPBOX        "MODIFICACION DE INFORMACION",GB_REPORTE_CARNET,476,20,297,134
+    PUSHBUTTON      "SALIR AL MENU ANTERIOR",BTN_REPORTE_CARNET_REGRESAR,494,200,254,31
+    PUSHBUTTON      "ORDENAR LISTA POR ID DE CARNET",BTN_REPORTE_CARNET_ORDENARPERSONASID,238,204,231,42
+    PUSHBUTTON      "BORRAR CARNET",BTN_REPORTE_CARNET_BORRAR,685,162,64,38
+    PUSHBUTTON      "BUSCAR NOMBRE DE PERSONA",BTN_REPORTE_CARNET_BUSCARNOMBRE,560,162,61,38,BS_MULTILINE
+    CTEXT           "Nombre de la Persona",LBL_NOMBREUSUARIO7,469,245,304,8,SS_CENTERIMAGE
+    PUSHBUTTON      "BUSCAR ID DE CARNET",BTN_REPORTE_CARNET_BUSCARID,494,162,66,38,BS_MULTILINE
+    PUSHBUTTON      "EDITAR CARNET",BTN_REPORTE_CARNET_EDITAR,621,162,64,38
+    PUSHBUTTON      "ORDENAR LISTA POR NOMBRES",BTN_REPORTE_CARNET_ORDENARPERSONASNOMBRE,7,204,231,42
+    EDITTEXT        TXTB_REPORTE_CARNET_LOTE,595,68,108,14,ES_UPPERCASE | ES_AUTOHSCROLL | WS_GROUP
+    CONTROL         "",DTP_REPORTE_CARNET_FECHADOSIS,"SysDateTimePick32",DTS_RIGHTALIGN | WS_GROUP | WS_TABSTOP,595,84,116,15,WS_EX_RIGHT | WS_EX_LEFTSCROLLBAR
+    COMBOBOX        CB_REPORTE_CARNET_CENTROVACUNACION,595,114,99,54,CBS_DROPDOWNLIST | CBS_UPPERCASE | WS_VSCROLL | WS_GROUP | WS_TABSTOP
+    LTEXT           "FECHA DE DOSIS:",IDC_STATIC,534,89,59,8
+    LTEXT           "LOTE:",IDC_STATIC,573,72,20,8
+    LTEXT           "NO. DOSIS:",IDC_STATIC,554,102,39,8
+    LTEXT           "ID CARNET:",IDC_STATIC,721,47,39,8
+    LTEXT           "CENTRO DE VACUNACION:",IDC_STATIC,506,115,87,8
+    COMBOBOX        CB_REPORTE_CARNET_DOSIS,595,101,73,54,CBS_DROPDOWNLIST | CBS_UPPERCASE | WS_VSCROLL | WS_GROUP | WS_TABSTOP
+    COMBOBOX        CB_REPORTE_CARNET_ID,713,33,53,54,CBS_DROPDOWNLIST | CBS_UPPERCASE | WS_VSCROLL | WS_GROUP | WS_TABSTOP
+    CONTROL         "",DTP_REPORTE_CARNET_FECHAPROXDOSIS,"SysDateTimePick32",DTS_RIGHTALIGN | WS_GROUP | WS_TABSTOP,595,127,116,15,WS_EX_RIGHT | WS_EX_LEFTSCROLLBAR
+    LTEXT           "FECHA DE PROXIMA DOSIS:",IDC_STATIC,501,130,92,8
+    EDITTEXT        TXTB_REPORTE_CARNET_APELLIDOPATERNO,479,32,69,14,ES_UPPERCASE | ES_AUTOHSCROLL | WS_GROUP
+    EDITTEXT        TXTB_REPORTE_CARNET_APELLIDOMATERNO,549,32,72,14,ES_UPPERCASE | ES_AUTOHSCROLL | WS_GROUP
+    EDITTEXT        TXTB_REPORTE_CARNET_NOMBRE,623,32,89,14,ES_UPPERCASE | ES_AUTOHSCROLL | WS_GROUP
+    LTEXT           "APELLIDO PATERNO",IDC_STATIC,481,47,66,8
+    LTEXT           "APELLIDO MATERNO",IDC_STATIC,552,47,68,8
+    LTEXT           "NOMBRE(S)",IDC_STATIC,649,47,38,8
 END
 
 
@@ -363,6 +481,54 @@ BEGIN
         HORZGUIDE, 106
         HORZGUIDE, 137
     END
+
+    DLG_REPORTEVACUNAS, DIALOG
+    BEGIN
+        LEFTMARGIN, 7
+        RIGHTMARGIN, 763
+        VERTGUIDE, 469
+        VERTGUIDE, 481
+        VERTGUIDE, 566
+        VERTGUIDE, 629
+        VERTGUIDE, 735
+        VERTGUIDE, 754
+        TOPMARGIN, 7
+        BOTTOMMARGIN, 292
+        HORZGUIDE, 40
+        HORZGUIDE, 197
+    END
+
+    DLG_REPORTEPERSONAS, DIALOG
+    BEGIN
+        LEFTMARGIN, 7
+        RIGHTMARGIN, 804
+        VERTGUIDE, 469
+        VERTGUIDE, 636
+        TOPMARGIN, 7
+        BOTTOMMARGIN, 340
+        HORZGUIDE, 68
+        HORZGUIDE, 94
+        HORZGUIDE, 121
+        HORZGUIDE, 147
+        HORZGUIDE, 176
+    END
+
+    DLG_REPORTECARNETS, DIALOG
+    BEGIN
+        LEFTMARGIN, 7
+        RIGHTMARGIN, 773
+        VERTGUIDE, 238
+        VERTGUIDE, 469
+        VERTGUIDE, 476
+        VERTGUIDE, 494
+        VERTGUIDE, 537
+        VERTGUIDE, 576
+        VERTGUIDE, 621
+        TOPMARGIN, 7
+        BOTTOMMARGIN, 254
+        HORZGUIDE, 51
+        HORZGUIDE, 239
+    END
 END
 #endif    // APSTUDIO_INVOKED
 
@@ -398,6 +564,21 @@ BEGIN
 END
 
 DLG_REGISTROVACUNAS AFX_DIALOG_LAYOUT
+BEGIN
+    0
+END
+
+DLG_REPORTECARNETS AFX_DIALOG_LAYOUT
+BEGIN
+    0
+END
+
+DLG_REPORTEPERSONAS AFX_DIALOG_LAYOUT
+BEGIN
+    0
+END
+
+DLG_REPORTEVACUNAS AFX_DIALOG_LAYOUT
 BEGIN
     0
 END
@@ -469,6 +650,50 @@ BEGIN
 0x4f4d, 0x4544, 0x4152, 0x4f44, "\000" 
     CB_PERSONA_PERFILRIESGO, 0x403, 5, 0
 0x4142, 0x4f4a, "\000" 
+    0
+END
+
+DLG_REPORTEPERSONAS DLGINIT
+BEGIN
+    CB_REPORTE_PERSONA_ESTADOCIVIL, 0x403, 11, 0
+0x4f53, 0x544c, 0x5245, 0x284f, 0x2941, "\000" 
+    CB_REPORTE_PERSONA_ESTADOCIVIL, 0x403, 10, 0
+0x4143, 0x4153, 0x4f44, 0x4128, 0x0029, 
+    CB_REPORTE_PERSONA_ESTADOCIVIL, 0x403, 14, 0
+0x4944, 0x4f56, 0x4352, 0x4149, 0x4f44, 0x4128, 0x0029, 
+    CB_REPORTE_PERSONA_ESTADOCIVIL, 0x403, 9, 0
+0x4956, 0x4455, 0x284f, 0x2941, "\000" 
+    CB_REPORTE_PERSONA_SEXO, 0x403, 10, 0
+0x414d, 0x4353, 0x4c55, 0x4e49, 0x004f, 
+    CB_REPORTE_PERSONA_SEXO, 0x403, 9, 0
+0x4546, 0x454d, 0x494e, 0x4f4e, "\000" 
+    CB_REPORTE_PERSONA_GRUPOOCUPACIONAL, 0x403, 11, 0
+0x5345, 0x5554, 0x4944, 0x4e41, 0x4554, "\000" 
+    CB_REPORTE_PERSONA_GRUPOOCUPACIONAL, 0x403, 11, 0
+0x5254, 0x4241, 0x4a41, 0x4441, 0x524f, "\000" 
+    CB_REPORTE_PERSONA_GRUPOOCUPACIONAL, 0x403, 12, 0
+0x4544, 0x4553, 0x504d, 0x454c, 0x4441, 0x004f, 
+    CB_REPORTE_PERSONA_GRUPOOCUPACIONAL, 0x403, 15, 0
+0x4d41, 0x2841, 0x294f, 0x4420, 0x2045, 0x4143, 0x4153, "\000" 
+    CB_REPORTE_PERSONA_GRUPOOCUPACIONAL, 0x403, 5, 0
+0x544f, 0x4f52, "\000" 
+    CB_REPORTE_PERSONA_PERFILRIESGO, 0x403, 5, 0
+0x4c41, 0x4f54, "\000" 
+    CB_REPORTE_PERSONA_PERFILRIESGO, 0x403, 9, 0
+0x4f4d, 0x4544, 0x4152, 0x4f44, "\000" 
+    CB_REPORTE_PERSONA_PERFILRIESGO, 0x403, 5, 0
+0x4142, 0x4f4a, "\000" 
+    0
+END
+
+DLG_REPORTEVACUNAS DLGINIT
+BEGIN
+    CB_REPORTE_VACUNA_TIPO, 0x403, 5, 0
+0x4f48, 0x414c, "\000" 
+    CB_REPORTE_VACUNA_TIPO, 0x403, 6, 0
+0x4441, 0x4f49, 0x0053, 
+    CB_REPORTE_VACUNA_TIPO, 0x403, 5, 0
+0x455a, 0x4154, "\000" 
     0
 END
 
