Solamente Falta el reporte de Carnets y El manual de usuario

--- a/PROYECTO_ESTRUCTURA_DE_DATOS/PROYECTO_ESTRUCTURA_DE_DATOS.rc
+++ b/PROYECTO_ESTRUCTURA_DE_DATOS/PROYECTO_ESTRUCTURA_DE_DATOS.rc
@@ -251,8 +251,8 @@ CAPTION "Bienvenido a Reporte de Vacunas!"
 FONT 10, "Comic Sans MS", 400, 0, 0x0
 BEGIN
     COMBOBOX        CB_REPORTE_VACUNA_TIPO,566,51,125,54,CBS_DROPDOWNLIST | CBS_UPPERCASE | WS_VSCROLL | WS_GROUP | WS_TABSTOP
-    COMBOBOX        CB_REPORTE_VACUNA_DOSIS,566,68,125,54,CBS_DROPDOWN | CBS_UPPERCASE | WS_VSCROLL | WS_GROUP | WS_TABSTOP
-    COMBOBOX        CB_REPORTE_VACUNA_MARCA,566,87,125,54,CBS_DROPDOWN | CBS_UPPERCASE | WS_VSCROLL | WS_GROUP | WS_TABSTOP
+    COMBOBOX        CB_REPORTE_VACUNA_DOSIS,566,68,125,54,CBS_DROPDOWNLIST | CBS_UPPERCASE | WS_VSCROLL | WS_GROUP | WS_TABSTOP
+    COMBOBOX        CB_REPORTE_VACUNA_MARCA,566,87,125,54,CBS_DROPDOWNLIST | CBS_UPPERCASE | WS_VSCROLL | WS_GROUP | WS_TABSTOP
     EDITTEXT        TXTB_REPORTE_VACUNA_PRECIO,566,105,125,14,ES_AUTOHSCROLL | ES_NUMBER | WS_GROUP
     EDITTEXT        TXTB_REPORTE_VACUNA_DESCRIPCION,566,123,181,46,ES_MULTILINE | ES_UPPERCASE | ES_AUTOHSCROLL | ES_WANTRETURN | WS_GROUP,WS_EX_LEFTSCROLLBAR
     PUSHBUTTON      "BUSCAR VACUNA",BTN_REPORTE_VACUNA_BUSCAR,501,196,85,31
@@ -343,24 +343,26 @@ BEGIN
     PUSHBUTTON      "BUSCAR ID DE CARNET",BTN_REPORTE_CARNET_BUSCARID,494,162,66,38,BS_MULTILINE
     PUSHBUTTON      "EDITAR CARNET",BTN_REPORTE_CARNET_EDITAR,621,162,64,38
     PUSHBUTTON      "ORDENAR LISTA POR NOMBRES",BTN_REPORTE_CARNET_ORDENARPERSONASNOMBRE,7,204,231,42
-    EDITTEXT        TXTB_REPORTE_CARNET_LOTE,595,68,108,14,ES_UPPERCASE | ES_AUTOHSCROLL | WS_GROUP
-    CONTROL         "",DTP_REPORTE_CARNET_FECHADOSIS,"SysDateTimePick32",DTS_RIGHTALIGN | WS_GROUP | WS_TABSTOP,595,84,116,15,WS_EX_RIGHT | WS_EX_LEFTSCROLLBAR
-    COMBOBOX        CB_REPORTE_CARNET_CENTROVACUNACION,595,114,99,54,CBS_DROPDOWNLIST | CBS_UPPERCASE | WS_VSCROLL | WS_GROUP | WS_TABSTOP
-    LTEXT           "FECHA DE DOSIS:",IDC_STATIC,534,89,59,8
-    LTEXT           "LOTE:",IDC_STATIC,573,72,20,8
-    LTEXT           "NO. DOSIS:",IDC_STATIC,554,102,39,8
+    EDITTEXT        TXTB_REPORTE_CARNET_LOTE,661,68,108,14,ES_UPPERCASE | ES_AUTOHSCROLL | ES_READONLY | WS_GROUP
+    LTEXT           "FECHA DE DOSIS:",IDC_STATIC,600,89,59,8
+    LTEXT           "LOTE:",IDC_STATIC,639,72,20,8
+    LTEXT           "NO. DOSIS:",IDC_STATIC,620,104,39,8
     LTEXT           "ID CARNET:",IDC_STATIC,721,47,39,8
-    LTEXT           "CENTRO DE VACUNACION:",IDC_STATIC,506,115,87,8
-    COMBOBOX        CB_REPORTE_CARNET_DOSIS,595,101,73,54,CBS_DROPDOWNLIST | CBS_UPPERCASE | WS_VSCROLL | WS_GROUP | WS_TABSTOP
+    LTEXT           "CENTRO DE VACUNACION:",IDC_STATIC,572,120,87,8
     COMBOBOX        CB_REPORTE_CARNET_ID,713,33,53,54,CBS_DROPDOWNLIST | CBS_UPPERCASE | WS_VSCROLL | WS_GROUP | WS_TABSTOP
-    CONTROL         "",DTP_REPORTE_CARNET_FECHAPROXDOSIS,"SysDateTimePick32",DTS_RIGHTALIGN | WS_GROUP | WS_TABSTOP,595,127,116,15,WS_EX_RIGHT | WS_EX_LEFTSCROLLBAR
-    LTEXT           "FECHA DE PROXIMA DOSIS:",IDC_STATIC,501,130,92,8
+    LTEXT           "FECHA DE PROXIMA DOSIS:",IDC_STATIC,567,135,92,8
     EDITTEXT        TXTB_REPORTE_CARNET_APELLIDOPATERNO,479,32,69,14,ES_UPPERCASE | ES_AUTOHSCROLL | WS_GROUP
     EDITTEXT        TXTB_REPORTE_CARNET_APELLIDOMATERNO,549,32,72,14,ES_UPPERCASE | ES_AUTOHSCROLL | WS_GROUP
     EDITTEXT        TXTB_REPORTE_CARNET_NOMBRE,623,32,89,14,ES_UPPERCASE | ES_AUTOHSCROLL | WS_GROUP
     LTEXT           "APELLIDO PATERNO",IDC_STATIC,481,47,66,8
     LTEXT           "APELLIDO MATERNO",IDC_STATIC,552,47,68,8
     LTEXT           "NOMBRE(S)",IDC_STATIC,649,47,38,8
+    EDITTEXT        TXTB_REPORTE_CARNET_FECHADOSIS,660,85,108,14,ES_AUTOHSCROLL | ES_READONLY
+    EDITTEXT        TXTB_REPORTE_CARNET_FECHAPROXDOSIS,662,133,103,14,ES_AUTOHSCROLL | ES_READONLY
+    LTEXT           "ID Vacuna:",IDC_STATIC,526,90,43,8
+    COMBOBOX        CB_REPORTE_CARNET_IDVACUNA,520,77,48,30,CBS_DROPDOWNLIST | CBS_SORT | WS_VSCROLL | WS_TABSTOP
+    EDITTEXT        TXTB_REPORTE_CARNET_DOSIS,661,101,105,14,ES_AUTOHSCROLL | ES_READONLY
+    EDITTEXT        TXTB_REPORTE_CARNET_CENTROVACUNACION,661,117,102,14,ES_AUTOHSCROLL | ES_READONLY
 END
 
 
