Se implemento la busqueda binaria del IdCarnet

--- a/PROYECTO_ESTRUCTURA_DE_DATOS/PROYECTO_ESTRUCTURA_DE_DATOS.rc
+++ b/PROYECTO_ESTRUCTURA_DE_DATOS/PROYECTO_ESTRUCTURA_DE_DATOS.rc
@@ -343,7 +343,7 @@ BEGIN
     PUSHBUTTON      "BUSCAR ID DE CARNET",BTN_REPORTE_CARNET_BUSCARID,494,162,66,38,BS_MULTILINE
     PUSHBUTTON      "EDITAR CARNET",BTN_REPORTE_CARNET_EDITAR,621,162,64,38
     PUSHBUTTON      "ORDENAR LISTA POR NOMBRES",BTN_REPORTE_CARNET_ORDENARPERSONASNOMBRE,7,204,231,42
-    EDITTEXT        TXTB_REPORTE_CARNET_LOTE,661,68,108,14,ES_UPPERCASE | ES_AUTOHSCROLL | ES_READONLY | WS_GROUP
+    EDITTEXT        TXTB_REPORTE_CARNET_LOTE,661,68,99,14,ES_UPPERCASE | ES_AUTOHSCROLL | WS_GROUP
     LTEXT           "FECHA DE DOSIS:",IDC_STATIC,600,89,59,8
     LTEXT           "LOTE:",IDC_STATIC,639,72,20,8
     LTEXT           "NO. DOSIS:",IDC_STATIC,620,104,39,8
@@ -357,12 +357,14 @@ BEGIN
     LTEXT           "APELLIDO PATERNO",IDC_STATIC,481,47,66,8
     LTEXT           "APELLIDO MATERNO",IDC_STATIC,552,47,68,8
     LTEXT           "NOMBRE(S)",IDC_STATIC,649,47,38,8
-    EDITTEXT        TXTB_REPORTE_CARNET_FECHADOSIS,660,85,108,14,ES_AUTOHSCROLL | ES_READONLY
-    EDITTEXT        TXTB_REPORTE_CARNET_FECHAPROXDOSIS,662,133,103,14,ES_AUTOHSCROLL | ES_READONLY
-    LTEXT           "ID Vacuna:",IDC_STATIC,526,90,43,8
-    COMBOBOX        CB_REPORTE_CARNET_IDVACUNA,520,77,48,30,CBS_DROPDOWNLIST | CBS_SORT | WS_VSCROLL | WS_TABSTOP
-    EDITTEXT        TXTB_REPORTE_CARNET_DOSIS,661,101,105,14,ES_AUTOHSCROLL | ES_READONLY
-    EDITTEXT        TXTB_REPORTE_CARNET_CENTROVACUNACION,661,117,102,14,ES_AUTOHSCROLL | ES_READONLY
+    EDITTEXT        TXTB_REPORTE_CARNET_FECHADOSIS,660,85,100,14,ES_UPPERCASE | ES_AUTOHSCROLL
+    EDITTEXT        TXTB_REPORTE_CARNET_FECHAPROXDOSIS,662,133,98,14,ES_UPPERCASE | ES_AUTOHSCROLL
+    LTEXT           "ID Vacuna:",IDC_STATIC,494,105,43,8
+    COMBOBOX        CB_REPORTE_CARNET_IDVACUNA,529,103,48,30,CBS_DROPDOWNLIST | CBS_SORT | WS_VSCROLL | WS_TABSTOP
+    EDITTEXT        TXTB_REPORTE_CARNET_DOSIS,661,101,99,14,ES_UPPERCASE | ES_AUTOHSCROLL
+    EDITTEXT        TXTB_REPORTE_CARNET_CENTROVACUNACION,661,117,99,14,ES_UPPERCASE | ES_AUTOHSCROLL
+    EDITTEXT        TXTB_REPORTE_CARNET_CURP,494,64,127,14,ES_UPPERCASE | ES_AUTOHSCROLL | ES_READONLY
+    LTEXT           "CURP DEL CARNET",IDC_STATIC,520,80,60,8
 END
 
 
@@ -526,6 +528,7 @@ BEGIN
         VERTGUIDE, 537
         VERTGUIDE, 576
         VERTGUIDE, 621
+        VERTGUIDE, 760
         TOPMARGIN, 7
         BOTTOMMARGIN, 254
         HORZGUIDE, 51
