Ya se implemento la busqueda binaria, el ordenamiento HeapShort y QuickShort, Porfavor profe reviseme otraves se lo imploro

--- a/PROYECTO_ESTRUCTURA_DE_DATOS/PROYECTO_ESTRUCTURA_DE_DATOS.rc
+++ b/PROYECTO_ESTRUCTURA_DE_DATOS/PROYECTO_ESTRUCTURA_DE_DATOS.rc
@@ -332,7 +332,7 @@ FONT 10, "Comic Sans MS", 400, 0, 0x0
 BEGIN
     CTEXT           "Hola!",IDC_STATIC,469,235,304,8
     CTEXT           "ACABA DE ACCEDER A LA OPCIÓN DE REPORTE Y MODIFICACION DE CARNETS",IDC_STATIC,7,7,766,11
-    LISTBOX         LB_REPORTE_CARNET_LISTA,7,40,462,161,LBS_SORT | LBS_NOINTEGRALHEIGHT | WS_VSCROLL | WS_TABSTOP
+    LISTBOX         LB_REPORTE_CARNET_LISTA,7,40,462,161,LBS_NOINTEGRALHEIGHT | WS_VSCROLL | WS_TABSTOP
     CTEXT           "LISTADO DE LAS PERSONA VACUNADAS:",IDC_STATIC,7,29,462,11
     GROUPBOX        "MODIFICACION DE INFORMACION",GB_REPORTE_CARNET,476,20,297,134
     PUSHBUTTON      "SALIR AL MENU ANTERIOR",BTN_REPORTE_CARNET_REGRESAR,494,200,254,31
